--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,19 +8,42 @@ set(SRC .)
 include_directories(${SRC}/include)
 aux_source_directory(${SRC} main)
 
-# mem_pool
-set(MEM_POOL_PATH ${SRC}/mem_pool)
-include_directories(${MEM_POOL_PATH}/include)
-aux_source_directory(${MEM_POOL_PATH} mem_pool)
+# data_structure
+set(DS_PATH ${SRC}/data_structure)
+include_directories(${DS_PATH}/include)
+aux_source_directory(${DS_PATH} data_structure)
+
+# allocator
+set(ALLOCATOR_PATH ${SRC}/allocator)
+include_directories(${ALLOCATOR_PATH}/include)
+aux_source_directory(${ALLOCATOR_PATH} allocator)
 
 # context
 set(CONTEXT_PATH ${SRC}/context)
-include_directories(${CONTEXT_PATH})
+include_directories(${CONTEXT_PATH}/include)
 aux_source_directory(${CONTEXT_PATH} context)
+set(context ${context} ${CONTEXT_PATH}/switch_context.asm)
+
+# utils
+set(UTILS_PATH ${SRC}/utils)
+include_directories(${UTILS_PATH}/include)
+aux_source_directory(${UTILS_PATH} utils)
+
+# sched
+set(SCHED_PATH ${SRC}/sched)
+include_directories(${SCHED_PATH}/include)
+aux_source_directory(${SCHED_PATH} sched)
+
+# sync
+set(SYNC_PATH ${SRC}/sync)
+include_directories(${SYNC_PATH}/include)
+aux_source_directory(${SYNC_PATH} sync)
 
 # exec
-add_compile_options(-std=c++17 -Wall -g)
-add_executable(Coroutine ${main} ${mem_pool} ${context})
+enable_language(ASM-ATT)
+add_executable(Coroutine ${main} ${data_structure} ${allocator} ${context} ${utils} ${sched} ${sync})
+add_compile_definitions(__CPU_CORE__=12)
+add_compile_options(-std=c++17 -g -Wall)
 
 # pthread
 target_link_libraries(Coroutine pthread)
