--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,9 @@ aux_source_directory(${ALLOCATOR_PATH} allocator)
 set(CONTEXT_PATH ${SRC}/context)
 include_directories(${CONTEXT_PATH}/include)
 aux_source_directory(${CONTEXT_PATH} context)
-set(context ${context} ${CONTEXT_PATH}/switch_context.asm)
+set(context ${context} ${CONTEXT_PATH}/switch_context_first_run.asm)
+set(context ${context} ${CONTEXT_PATH}/_switch_context.asm)
+set(context ${context} ${CONTEXT_PATH}/save_context.asm)
 
 # utils
 set(UTILS_PATH ${SRC}/utils)
@@ -39,11 +41,18 @@ set(SYNC_PATH ${SRC}/sync)
 include_directories(${SYNC_PATH}/include)
 aux_source_directory(${SYNC_PATH} sync)
 
+# test
+set(TEST_PATH ${SRC}/test)
+include_directories(${TEST_PATH}/include)
+aux_source_directory(${TEST_PATH} test)
+
 # exec
 enable_language(ASM-ATT)
-add_executable(Coroutine ${main} ${data_structure} ${allocator} ${context} ${utils} ${sched} ${sync})
+set(CMAKE_CXX_COMPILER /usr/bin/g++-13)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -D_FORTIFY_SOURCE=0")
+add_executable(Coroutine ${main} ${data_structure} ${allocator} ${context} ${utils} ${sched} ${sync} ${test})
 add_compile_definitions(__CPU_CORE__=12)
-add_compile_options(-std=c++17 -g -Wall)
 
 # pthread
 target_link_libraries(Coroutine pthread)
