--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,10 +49,26 @@ aux_source_directory(${TEST_PATH} test)
 # exec
 enable_language(ASM-ATT)
 set(CMAKE_CXX_COMPILER /usr/bin/g++-13)
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -D_FORTIFY_SOURCE=0")
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O2 -Wall -fno-omit-frame-pointer")
 add_executable(Coroutine ${main} ${data_structure} ${allocator} ${context} ${utils} ${sched} ${sync} ${test})
-add_compile_definitions(__CPU_CORE__=12)
+
+# basic configuration
+add_compile_definitions(__CPU_CORE__=8)
+add_compile_definitions(__CACHE_LINE__=64)
+
+# debug flag
+#add_compile_definitions(__DEBUG__)
+
+# scheduler data structure
+#add_compile_definitions(__SCHED_RB_TREE__)
+add_compile_definitions(__SCHED_HEAP__)
+#add_compile_definitions(__SCHED_SKIP_LIST__)
+#add_compile_definitions(__SCHED_FIFO_QUEUE__)
+
+# stack allocate mode
+#add_compile_definitions(__STACK_DYN__)
+add_compile_definitions(__STACK_STATIC__)
 
 # pthread
 target_link_libraries(Coroutine pthread)
