--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,9 +48,9 @@ aux_source_directory(${TEST_PATH} test)
 
 # exec
 enable_language(ASM-ATT)
-set(CMAKE_CXX_COMPILER /usr/bin/g++-13)
+set(CMAKE_CXX_COMPILER /usr/bin/clang++-18)
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O2 -Wall -fno-omit-frame-pointer")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -fsanitize=thread -fno-omit-frame-pointer")
 add_executable(Coroutine ${main} ${data_structure} ${allocator} ${context} ${utils} ${sched} ${sync} ${test})
 
 # basic configuration
@@ -58,7 +58,10 @@ add_compile_definitions(__CPU_CORE__=8)
 add_compile_definitions(__CACHE_LINE__=64)
 
 # debug flag
-#add_compile_definitions(__DEBUG__)
+add_compile_definitions(__DEBUG__)
+
+# memory pool
+#add_compile_definitions(__MEM_PMR__)
 
 # scheduler data structure
 #add_compile_definitions(__SCHED_RB_TREE__)
